# iterative-closest-point

./: .gitignore  CMakeLists.txt  Pipfile  README.md  conanfile.txt  horse_tr_loin.txt  install.sh  install_prof.sh  run.sh
benchmark/: callgrind.out.76685
data_students/: README.md  bun000.txt  bun045.txt  bun180.txt  bun270.txt  bun315.txt
lib/: CMakeLists.txt
src/: bench.cc  bench.cpp  cpu.cc  cpu.hh  cpu_facto.cc  load.cc  load.hh  main.cc
src/GPU/: compute.cu  compute.hh  gpu.cc  gpu.hh  header.hh  main.cc
